--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/123/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/123/index.mdx
@@ -1,8 +1,8 @@
 ---
 slug: /123
-title: "React Hebdo #123: ..."
+title: "React Hebdo #123: TanStack Router, Gatsby, Remix, Next.js, React-Three-Fiber, Astro, Expo, Open Native, Rome..."
 authors: [slorber]
-date: 11-07-2022
+date: 11-08-2022
 image: /img/TWIR_POST.png
 unlisted: true
 ---
@@ -11,7 +11,7 @@ Salut à tous !
 
 C'était la [Jamstack Conf](https://jamstack.org/conf/) cette semaine, et on a eu quelques annonces sympa pour l'occasion, comme Tanstack Router, Gatsby 5 ou les résultats de leur sondage annuel.
 
-Expo sort son superbe SDK 47. La 1ère release-candidate React-Native 0.70 conduit à quelques soucis de build Android sur des versions précédentes 😅.
+Expo sort son superbe SDK 47. La 1ère release-candidate React-Native 0.71 conduit à quelques soucis de build Android sur des versions précédentes 😅.
 
 Next.js et React-Native utilisent maintenant TypeScript par défaut sur les nouvelles apps.
 
